@@ -1,3 +1,9 @@
+2023-07-17 Felix Salfelder <felix AT salfelder.org>
+
+	* support/regression/Makefile.in,
+	  support/regression/compact-results.py:
+	  Fix bug #3613.
+
 2023-07-13 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/pdk/gen.c:
